스프링 무작정 따라하기 파일업로드 + 부트스트랩 적용

--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>게시글 리스트 페이지</title>
-</head>
-
-<style>
-    .layout {
-        width: 500px;
-        margin: 0 auto;
-        margin-top: 40px
-    }
-
-</style>
-<body>
-
-  <div class="layout">
-    <table>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
+<th:block layout:fragment="content">
+  <table class="table table-dark">
       <thead>
-        <tr>
+      <tr>
           <th>글번호</th>
           <th>제목</th>
-        </tr>
+      </tr>
       </thead>
       <tbody>
-        <tr th:each="board: ${list}">
+      <tr th:each="board: ${list}">
           <td th:text="${board.id}">1</td>
           <td>
-            <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"> </a>
+              <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"> </a>
           </td>
-        </tr>
+      </tr>
       </tbody>
-    </table>
-  </div>
-
-</body>
+  </table>
+</th:block>
 </html>
