--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>게시글 상세 페이지</title>
-</head>
-<body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
+<th:block layout:fragment="content">
+    <h1 th:text="${board.title}">제목입니다.</h1>
+    <p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
+    <a th:href="@{${board.filepath}}">다운받기</a>
+    <a th:href="@{/board/delete(id=${board.id})}">글 삭제</a>
+    <a th:href="@{/board/modify/{id}(id=${board.id})}">  수정</a>
+    <a th:href="@{/board/list}">  목록</a>
+</th:block>
 
-<h1 th:text="${board.title}">제목입니다.</h1>
-<p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
-<a th:href="@{/board/delete(id=${board.id})}"> 글 삭제 </a>
-</body>
 </html>
