--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>게시물 작성폼</title>
-</head>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
 
-<style>
-    .layout {
-        width: 500px;
-        margin: 0 auto;
-        margin-top: 40px
-    }
-
-    .layout input {
-        width: 100%;
-        box-sizing: border-box;
-    }
-
-    .layout textarea {
-        width: 100%;
-        margin-top: 10px;
-        min-height: 300px;
-    }
-</style>
-<body>
-    <div class="layout">
-        <form action="/board/writepro" method="post">
-            <input type="text" name="title">
-            <textarea name="content"></textarea>
-            <button type="submit">작성</button>
+<th:block layout:fragment="content">
+    <div class="p-5">
+        <form action="/board/writepro" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="title">제목</label>
+                <input type="text" class="form-control" name="title" id="title">
+            </div>
+            <div class="form-group">
+                <label for="content">내용</label>
+                <textarea class="form-control" rows="10" id="content" name="content"></textarea>
+            </div>
+            <input type="file" class="form-control-file border" name="file">
+            <button type="submit" class="btn btn-light mt-3 float-right">작성</button>
         </form>
     </div>
-</body>
+</th:block>
 </html>
